# taskboard-mobile-tailscale

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  pyproject.toml  serve-hidden.vbs
api/app/: __init__.py  config.py  db.py  events.py  main.py  models.py  printing.py  schemas.py  seed.py
api/app/routers/: boards.py  comments.py  statuses.py  swimlanes.py  tasks.py
api/tests/: conftest.py  test_api.py
desktop/: make_icon.py  package.json  vite.config.ts
desktop/src/: App.tsx  api.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: main.rs
desktop/src/components/: BoardView.tsx  Sidebar.tsx  TaskCard.tsx  TaskDrawer.tsx
docs/: 00-setup.md  01-architecture.md  02-data-model.md  03-printer-integration.md
docs/adr/: 0001-stack-choices.md
mobile/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json
mobile/src/: api.ts  theme.ts
mobile/src/screens/: BoardScreen.tsx  BoardsScreen.tsx  TaskScreen.tsx
