[project]
name = "taskboard-api"
version = "0.1.0"
description = "FastAPI + SQLite backend for TaskBoard: subjects, swimlanes, tasks, comments, and receipt printing."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
